--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="hamburger" onclick="mostrar()">
             <span></span><span></span><span></span>
         </div>
-        <label class="logo">Formando Codigo</label>
+        <label class="logo">Barberia Alura 2024</label>
         <ul id="sliding_menu">
             <li><span class="close" onclick="ocultar()">X</span></li>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Servicios</a></li>
-            <li><a href="#">Eventos</a></li>
+            <li><a href="#">Cortes</a></li>
+            <li><a href="#">Productos</a></li>
             <li><a href="#">Contactenos</a></li>
         </ul>
     </nav>
@@ -28,10 +28,9 @@
 <header>
 <div class="banner">
     <div class="texto_banner">
-        <h1>Servicios Generales</h1>
-        <p>Hacemos con pasion nuestra laborar
-            de llevarles nuestros mejores productos al 
-            mercado Colombiano y del Mundo
+        <h1>Servicios con Experiencia</h1>
+        <p>profesionales experimentados que están constantemente 
+            observando los cambios y movimiento en el mundo de la moda
         </p>
     </div>
 </div>
@@ -41,19 +40,60 @@
     <section class="nosotros">
         <h1 class="titulo">¿Quienes Somos?</h1>
         <div class="linea"></div>
-        <p class="contenido">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Veritatis, molestias distinctio? Minus deleniti facilis dolorem omnis eos. 
-            Modi voluptatibus alias corporis? Maiores illo voluptate esse voluptas 
-            similique eius mollitia tempore?
-            Beatae cupiditate explicabo corporis rerum voluptas, 
-            corrupti dignissimos voluptates fugit eum placeat delectus sint 
-            necessitatibus ratione expedita ut ea, nobis consequatur sequi!
-            Iste ipsum alias expedita aliquid in amet, nesciunt delectus atque 
-            repellendus, aperiam molestiae exercitationem neque velit enim numquam 
-            et esse consectetur repellat.
+        <p class="contenido">Ubicada en el corazón de la ciudad, la Barbería Alura 
+            trae para el mercado lo que hay de mejor para su cabello y barba. 
+            Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y 
+            conquista nuevos clientes diariamente.
+        </p>
+        <p>
+            Nuestra misión es: "Proporcionar autoestima y calidad de vida a nuestros clientes".
+        </p>
+        <p>
+            Ofrecemos profesionales experimentados que están constantemente observando los 
+            cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros 
+            clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y 
+            agilidad, garantizando calidad y satisfacción de nuestros clientes.
         </p>
         <a href="#" class="boton"> Ver mas</a>
     </section>
+
+    <section class="ubicacion">
+        <h1 class="titulo">Nuestra Ubicacion</h1>
+        <p>
+            Nuesto local esta ubicado en el centro de la ciudad
+        </p>
+        <div class="mapa-contenido">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37829.925852192646!2d-74.06451252385011!3d4.703674609769161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+                1!2m1!1sOracle%20NetSuite%20colombia!5e0!3m2!1ses-419!2sco!4v1707309530122!5m2!1ses-419!2sco" 
+                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                
+            </div>
+    </section>
+
+    <section class="diferenciales">
+        <h1 class="titulo">Diferenciales</h1>
+        <div class="lista-diferenciales">
+            <ul>
+                <li class="items">Atencion personalizada a los clientes</li>
+                <li class="items">Espacio amplios y confortables</li>
+                <li class="items">Localizacion</li>
+                <li class="items">Profesionales de la belleza</li>
+                <li class="items">Puntualidad</li>
+                <li class="items">Limpieza</li>
+            </ul>
+        </div>
+        <div class="imagen-diferencial">
+            <figure>
+                <img class="imagen-diferencial-1" src="imagenes/diferenciales.jpg">
+                <figcaption>Oficio hecho arte</figcaption>                    
+            </figure> 
+        </div>
+    </section>
+
+    <div class="video">
+        <iframe src="https://www.youtube.com/embed/QmtPlbxB7rA?si=Yv59XK4AvVBJ4J_c&amp;start=37" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
+    </div>
 
     <section class="servicios">
         <h1 class="titulo">Nuestros Servicios</h1>
@@ -80,7 +120,6 @@
                 <div class="boton2"> Ver mas</div>
             </div>
         </div>
-
     </section>
 
     <footer class="redes">
