--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Barberia Alura 2024</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="funciones.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -29,10 +30,11 @@
 <div class="banner">
     <div class="texto_banner">
         <h1>Servicios con Experiencia</h1>
-        <p>profesionales experimentados que están constantemente 
+        <p>Profesionales experimentados que están constantemente 
             observando los cambios y movimiento en el mundo de la moda
         </p>
     </div>
+    <img src="imagenes/logo-blanco.png" alt="">
 </div>
 </header>
 
@@ -40,29 +42,25 @@
     <section class="nosotros">
         <h1 class="titulo">¿Quienes Somos?</h1>
         <div class="linea"></div>
-        <p class="contenido">Ubicada en el corazón de la ciudad, la Barbería Alura 
-            trae para el mercado lo que hay de mejor para su cabello y barba. 
-            Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y 
-            conquista nuevos clientes diariamente.
-        </p>
-        <p>
-            Nuestra misión es: "Proporcionar autoestima y calidad de vida a nuestros clientes".
-        </p>
-        <p>
-            Ofrecemos profesionales experimentados que están constantemente observando los 
+        <img class="utensilios" src="imagenes/utensilios.jpg" alt="Utensilios de un Barbero">
+        <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado 
+            lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura 
+            ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
+        <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a 
+            nuestros clientes".</strong></em></p>
+        <p>Ofrecemos profesionales experimentados que están constantemente observando los 
             cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros 
-            clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y 
-            agilidad, garantizando calidad y satisfacción de nuestros clientes.
+            clientes las últimas tendencias. El atendimiento posee un padrón de 
+            excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes.
         </p>
         <a href="#" class="boton"> Ver mas</a>
     </section>
 
     <section class="ubicacion">
         <h1 class="titulo">Nuestra Ubicacion</h1>
-        <p>
-            Nuesto local esta ubicado en el centro de la ciudad
-        </p>
-        <div class="mapa-contenido">
+        <div class="linea"></div>
+        <p>Nuesto local esta ubicado en el centro de la ciudad</p>
+        <div class="ubicacion-mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37829.925852192646!2d-74.06451252385011!3d4.703674609769161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
                 1!2m1!1sOracle%20NetSuite%20colombia!5e0!3m2!1ses-419!2sco!4v1707309530122!5m2!1ses-419!2sco" 
                 width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                
@@ -71,22 +69,25 @@
 
     <section class="diferenciales">
         <h1 class="titulo">Diferenciales</h1>
-        <div class="lista-diferenciales">
-            <ul>
-                <li class="items">Atencion personalizada a los clientes</li>
-                <li class="items">Espacio amplios y confortables</li>
-                <li class="items">Localizacion</li>
-                <li class="items">Profesionales de la belleza</li>
-                <li class="items">Puntualidad</li>
-                <li class="items">Limpieza</li>
-            </ul>
-        </div>
-        <div class="imagen-diferencial">
-            <figure>
-                <img class="imagen-diferencial-1" src="imagenes/diferenciales.jpg">
-                <figcaption>Oficio hecho arte</figcaption>                    
-            </figure> 
-        </div>
+        <div class="linea"></div>
+        <div class="contenido">
+            <div class="lista-diferenciales">
+                <ul>
+                    <li class="items">Atencion personalizada a los clientes</li>
+                    <li class="items">Espacio amplios y confortables</li>
+                    <li class="items">Localizacion</li>
+                    <li class="items">Profesionales de la belleza</li>
+                    <li class="items">Puntualidad</li>
+                    <li class="items">Limpieza</li>
+                </ul>
+            </div>
+            <div class="imagen-diferencial">
+                <figure>
+                    <img class="imagen-diferencial-1" src="imagenes/diferenciales.jpg">
+                    <figcaption>Oficio hecho arte</figcaption>                    
+                </figure> 
+            </div>
+        </div>            
     </section>
 
     <div class="video">
@@ -120,7 +121,39 @@
                 <div class="boton2"> Ver mas</div>
             </div>
         </div>
+        
     </section>
+
+    <!-- <div class="contenidoX">        
+        <div class="imagen1">                
+            <div><img src="imagenes/imagen4.jpg" alt=""></div>
+            <p>Testing</p>
+        </div>
+        <div class="imagen1">                
+            <div><img src="imagenes/imagen4.jpg" alt=""></div>
+            <p>Testing</p>
+        </div>
+    </div> -->
+
+    <div class="contenidoxx"> 
+        <div class="imagen1x">
+            <ul>
+                <li >Atencion personalizada a los clientes</li>
+                <li>Espacio amplios y confortables</li>
+                <li>Localizacion</li>
+                <li>Profesionales de la belleza</li>
+                <li>Puntualidad</li>
+                <li>Limpieza</li>
+            </ul>
+        </div>
+        <div class="imagen2x">
+            <img style="width: 100px; height: 100px;"  class="imagen-dif" src="imagenes/diferenciales.jpg">
+            <!-- <figure>
+                <img class="imagen-dif" src="imagenes/diferenciales.jpg">
+                <figcaption>Oficio hecho arte</figcaption>                    
+            </figure>  -->
+        </div>
+    </div>
 
     <footer class="redes">
         <h3>Siguenos en:</h3>
