--- a/prueba2.html
+++ b/prueba2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barberia Alura 2024</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="prueba2.css">
     <script type="text/javascript" src="funciones.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -145,69 +145,7 @@
                 <h2 class="titulo">Contacto</h2>
                 <div class="linea"></div>
             </div>
-            <section class="contacto" id="contacto">                        
-                <div class="contacto-detalle">
-                    <div class="contacto-detalle-grupo">
-                        <p class="contacto-etiqueta">Dirección:</p>
-                        <p class="contacto-texto">Medellin, Colombia - Latam</p>
-                    </div>
-                    <div class="contacto-detalle-grupo">
-                        <p class="contacto-etiqueta">Email:</p>
-                        <p class="contacto-texto">jyzapata@gmail.com</p>
-                    </div>
-                    <div class="contacto-detalle-grupo texto-largo">
-                        <p class="contacto-texto">
-                            Deje su mensaje y con gusto se los responderemos. Muchas gracias.
-                        </p>
-                    </div>
-                </div>
-                <form class="contacto-formulario" name="contacto" netlify>
-                    <div class="contacto-formulario-grupo">
-                        <label class="contacto-etiqueta" for="name">Nombre</label>
-                        <input required type="text" name="name" id="name" />
-                    </div>
-                    <div class="contacto-formulario-grupo">
-                        <label class="contacto-etiqueta"  for="email">Email</label>
-                        <input required type="email" name="email" id="email" />
-                    </div>
-                    <div class="contacto-formulario-grupo">
-                        <label class="contacto-etiqueta" for="message">Mensaje</label>
-                        <textarea required name="message" id="message" rows="6"></textarea>
-                    </div>
-                    <div class="cs-div-contacto-enviar">
-                        <button type="submit" class="cs-btn-contacto-enviar">Enviar</button>
-                    </div>
-                </form>
-                <div class="contacto-horario">
-                    <table class="cs-contacto-tabla">
-                        <thead>
-                            <th>Dia</th>
-                            <th>Horario</th>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Lunes</td>
-                                <td>9:00am - 7:00pm</td>
-                            </tr>
-                            <tr>
-                                <td>Miercoles</td>
-                                <td>8:00am - 8:00pm</td>
-                            </tr><tr>
-                                <td>Viernes</td>
-                                <td>7:00am - 9:00pm</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>                                                                                                                       
-            </section>
-        </div>
-
-        <!-- <div class="formulario-contacto" id="formulario-contacto">
-            <section class="contacto" id="contacto">
-                <div class="contacto-titulo">
-                    <h2 class="titulo">Contacto</h2>
-                    <div class="linea"></div>
-                </div>
+            <section class="contacto" id="contacto">                
                 <div class="contacto-detalle">
                     <div class="contacto-detalle-grupo">
                         <p class="contacto-etiqueta">Dirección:</p>
@@ -223,23 +161,6 @@
                         </p>
                     </div>
                 </div>
-                <form class="contacto-formulario" name="contacto" netlify>
-                    <div class="contacto-formulario-grupo">
-                        <label class="contacto-etiqueta" for="name">Nombre</label>
-                        <input required type="text" name="name" id="name" />
-                    </div>
-                    <div class="contacto-formulario-grupo">
-                        <label class="contacto-etiqueta"  for="email">Email</label>
-                        <input required type="email" name="email" id="email" />
-                    </div>
-                    <div class="contacto-formulario-grupo">
-                        <label class="contacto-etiqueta" for="message">Mensaje</label>
-                        <textarea required name="message" id="message" rows="6"></textarea>
-                    </div>
-                    <div class="cs-div-contacto-enviar">
-                        <button type="submit" class="cs-div-contacto-enviar">Enviar</button>
-                    </div>                    
-                </form>
                 <div class="contacto-horario">
                     <table>
                         <thead>
@@ -261,8 +182,24 @@
                         </tbody>
                     </table>
                 </div>
+                <form class="contacto-formulario" name="contacto" netlify>
+                    <div class="contacto-formulario-grupo">
+                        <label class="contacto-etiqueta" for="name">Nombre</label>
+                        <input required type="text" name="name" id="name" />
+                    </div>
+                    <div class="contacto-formulario-grupo">
+                        <label class="contacto-etiqueta"  for="email">Email</label>
+                        <input required type="email" name="email" id="email" />
+                    </div>
+                    <div class="contacto-formulario-grupo">
+                        <label class="contacto-etiqueta" for="message">Mensaje</label>
+                        <textarea required name="message" id="message" rows="6"></textarea>
+                    </div>
+                    <button type="submit" class="contacto-enviar">Enviar</button>
+                </form>
+                
             </section>
-        </div> -->
+        </div>
                 <!-- la propiedad alt nos ayuda en caso tal que algun navegador no pueda visualizar la imagen-->            
         <footer>
             <div class="grid-container">
