--- a/index.html
+++ b/index.html
@@ -156,9 +156,7 @@
                         <p class="contacto-texto">jyzapata@gmail.com</p>
                     </div>
                     <div class="contacto-detalle-grupo texto-largo">
-                        <p class="contacto-texto">
-                            Deje su mensaje y con gusto se los responderemos. Muchas gracias.
-                        </p>
+                        <p class="contacto-texto">Deje su mensaje y con gusto se los responderemos. Muchas gracias</p>
                     </div>
                 </div>
                 <form class="contacto-formulario" name="contacto" netlify>
@@ -212,7 +210,7 @@
                     <i class='bx bxl-facebook-circle bx-sm bx-burst-hover espacio' style='color:#ffffff'></i>
                     <i class='bx bxl-instagram-alt bx-sm bx-burst-hover espacio' style='color:#ffffff'></i>
                     <i class='bx bxl-youtube bx-sm bx-burst-hover espacio' style='color:#ffffff'></i>
-                    <i class='bx bxl-google-plus-circle bx-sm bx-burst-hover espacio' style='color:#ffffff' ></i>
+                    <i class='bx bxl-google-plus-circle bx-sm bx-burst-hover espacio' style='color:#ffffff'></i>
                 </div>
                 <div class="footer-derechos">
                     <p class="copyright">&copy Powered by Jovany ZH for ONE-Alura</p>
