Ajustes dimensiones elementos index style
Ajustes a gradientes, colores, iframes, min-max content en seccion diferenciales add grid, anchos responsivos de la diferentes secciones tiempo aparicion menu p index-style

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="ubicacion-mapa">
                 <iframe class="cs-ubicacion-iframe" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d37829.925852192646!2d-74.06451252385011!3d4.703674609769161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
                 1!2m1!1sOracle%20NetSuite%20colombia!5e0!3m2!1ses-419!2sco!4v1707309530122!5m2!1ses-419!2sco" 
-                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
         </section>
@@ -88,7 +88,7 @@
         </section>
         <div class="cs-diferente-video">
             <iframe class="cs-diferente-iframe" src="https://www.youtube.com/embed/QmtPlbxB7rA?si=Yv59XK4AvVBJ4J_c&amp;start=37" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
         <section class="servicios" id="servicios">
